// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inputDate > renders with ariaLabel correctly 1`] = `
"<div aria-label="Aria label" data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with as correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with class correctly 1`] = `
"<div data-slot="base" class="max-w-sm" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with default slot correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>Default slot
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with default value correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="1" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-01">
</div>"
`;

exports[`inputDate > renders with disabled correctly 1`] = `
"<div data-slot="base" role="group" aria-disabled="true" data-disabled="" dir="ltr">
  <div role="spinbutton" contenteditable="false" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" aria-disabled="true" data-disabled="" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" aria-disabled="true" data-disabled="" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="false" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" aria-disabled="true" data-disabled="" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" aria-disabled="true" data-disabled="" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="false" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" aria-disabled="true" data-disabled="" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" disabled="" value="">
</div>"
`;

exports[`inputDate > renders with icon correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></span>
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with isDateUnavailable correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with leading slot correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div><span data-slot="leading" class="">Leading slot</span>
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with leadingIcon correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></span>
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with maxValue correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" max="2025-01-31" value="">
</div>"
`;

exports[`inputDate > renders with minValue correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" min="2025-01-01" value="">
</div>"
`;

exports[`inputDate > renders with modelValue correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="1" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-01">
</div>"
`;

exports[`inputDate > renders with neutral variant ghost correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with neutral variant ghost highlight correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with neutral variant none correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with neutral variant none highlight correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with neutral variant outline correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with neutral variant outline highlight correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with neutral variant soft correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with neutral variant soft highlight correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with neutral variant subtle correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with neutral variant subtle highlight correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with primary variant ghost correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with primary variant ghost highlight correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with primary variant none correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with primary variant none highlight correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with primary variant outline correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with primary variant outline highlight correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with primary variant soft correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with primary variant soft highlight correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with primary variant subtle correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with primary variant subtle highlight correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="2025-01-15">
</div>"
`;

exports[`inputDate > renders with range and defaultValue correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-akar-date-range-field-segment-type="start" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="start" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="1" data-akar-date-field-segment="day" data-akar-date-range-field-segment-type="start" data-slot="segment" class="" data-segment="day">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="start" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-akar-date-range-field-segment-type="start" data-slot="segment" class="" data-segment="year">2025</div><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="separatorIcon" class=""></svg>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-akar-date-range-field-segment-type="end" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="end" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-akar-date-range-field-segment-type="end" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="end" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-akar-date-range-field-segment-type="end" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="2025-01-01 - 2025-01-15">
</div>"
`;

exports[`inputDate > renders with range and modelValue correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-akar-date-range-field-segment-type="start" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="start" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="1" data-akar-date-field-segment="day" data-akar-date-range-field-segment-type="start" data-slot="segment" class="" data-segment="day">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="start" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-akar-date-range-field-segment-type="start" data-slot="segment" class="" data-segment="year">2025</div><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="separatorIcon" class=""></svg>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="1 - January" data-akar-date-field-segment="month" data-akar-date-range-field-segment-type="end" data-slot="segment" class="" data-segment="month">1</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="end" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="15" aria-valuetext="15" data-akar-date-field-segment="day" data-akar-date-range-field-segment-type="end" data-slot="segment" class="" data-segment="day">15</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="end" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="2025" data-akar-date-field-segment="year" data-akar-date-range-field-segment-type="end" data-slot="segment" class="" data-segment="year">2025</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="2025-01-01 - 2025-01-15">
</div>"
`;

exports[`inputDate > renders with range correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-akar-date-range-field-segment-type="start" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="start" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-akar-date-range-field-segment-type="start" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="start" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-akar-date-range-field-segment-type="start" data-slot="segment" class="" data-segment="year">yyyy</div><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="separatorIcon" class=""></svg>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-akar-date-range-field-segment-type="end" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="end" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-akar-date-range-field-segment-type="end" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="end" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-akar-date-range-field-segment-type="end" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="undefined - undefined">
</div>"
`;

exports[`inputDate > renders with readonly correctly 1`] = `
"<div data-slot="base" role="group" data-readonly="" dir="ltr">
  <div role="spinbutton" contenteditable="false" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" aria-readonly="true" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" aria-readonly="true" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="false" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" aria-readonly="true" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" aria-readonly="true" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="false" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" aria-readonly="true" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with separator slot correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with separatorIcon correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-akar-date-range-field-segment-type="start" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="start" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-akar-date-range-field-segment-type="start" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="start" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-akar-date-range-field-segment-type="start" data-slot="segment" class="" data-segment="year">yyyy</div><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="separatorIcon" class=""></svg>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-akar-date-range-field-segment-type="end" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="end" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-akar-date-range-field-segment-type="end" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-akar-date-range-field-segment-type="end" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-akar-date-range-field-segment-type="end" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" value="undefined - undefined">
</div>"
`;

exports[`inputDate > renders with size lg correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with size md correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with size sm correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with size xl correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with size xs correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with trailing slot correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if--><span data-slot="trailing" class="">Trailing slot</span><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with trailingIcon correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if--><span data-slot="trailing" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></span><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;

exports[`inputDate > renders with ui correctly 1`] = `
"<div data-slot="base" role="group" dir="ltr">
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="month, " aria-valuemin="1" aria-valuemax="12" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="month" data-slot="segment" class="" data-segment="month">mm</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="day," aria-valuemin="1" aria-valuemax="31" aria-valuenow="1" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="day" data-slot="segment" class="" data-segment="day">dd</div>
  <div aria-hidden="true" data-segment="literal" contenteditable="false" data-akar-date-field-segment="literal" data-slot="segment" class="">/</div>
  <div role="spinbutton" contenteditable="true" tabindex="0" spellcheck="false" inputmode="numeric" autocorrect="off" enterkeyhint="next" style="caret-color: transparent;" aria-label="year, " aria-valuemin="1" aria-valuemax="9999" aria-valuenow="2025" aria-valuetext="Empty" data-placeholder="" data-akar-date-field-segment="year" data-slot="segment" class="" data-segment="year">yyyy</div>
  <!--v-if-->
  <!--v-if--><input aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" type="date" value="">
</div>"
`;
